# ai-projects-playground

./: README.md  pyproject.toml
projects/: __init__.py
projects/sentiment_analyzer/: README.md  __init__.py  requirements.txt
projects/sentiment_analyzer/app/: __init__.py  app.py  sentiment_analyzer.py
projects/wikipedia_rag/: README.md  __init__.py  requirements.txt
projects/wikipedia_rag/app/: __init__.py  app.py  wiki_rag.py
projects/youtube_summarizer/: README.md  __init__.py  requirements.txt
projects/youtube_summarizer/app/: __init__.py  summarizer.py
